Scrollbar on Chromium/RPi Fixes #365

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -86,14 +86,17 @@
 
 .menuBarButtonGroups .menuBarNavButtons {
   width: 99%;
+  height: 46px;
 }
 
 .menuBarButtonGroups .menuBarAlarmsButton {
   width: 25%;
+  height: 46px;
 }
 
 .menuBarButtonGroups .menuBarSettingsButton {
   width: 25%;
+  height: 46px;
 }
 
 .menu-items-with-icons {
